--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "proyecto-final",
   "version": "1.0.0",
   "main": "app.js",
-  "devDependencies": {},
-  "type": "modules",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,7 +18,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.1",
+    "mongoose": "^8.18.2",
     "nodemailer": "^7.0.6"
   },
   "bugs": {
